<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_edit"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginBottom="24dp"/>

        <EditText
            android:id="@+id/editTextAlbumName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_name"
            android:textColor="@color/black"
            android:padding="16dp"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextAlbumSinger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_singer"
            android:textColor="@color/black"
            android:padding="16dp"
            android:inputType="text"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextAlbumSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/album_songs"
            android:textColor="@color/black"
            android:padding="16dp"
            android:inputType="number"
            android:layout_marginBottom="24dp"/>

        <Button
            android:id="@+id/buttonSaveChanges"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_changes"
            android:textColor="@color/white"
            android:background="@color/teal_200"
            android:textSize="18sp"
            android:padding="16dp"
            android:elevation="4dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/btnBackToMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_back_to_main"
            android:textColor="@color/white"
            android:background="@color/red"
            android:textSize="18sp"
            android:padding="16dp"
            android:elevation="4dp"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>
