<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/windowBackground"
    android:elevation="4dp"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start"/>

    <TextView
        android:id="@+id/textViewSinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_singer"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="8dp"
        android:layout_gravity="start"/>

    <TextView
        android:id="@+id/textViewSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album_songs"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginBottom="16dp"
        android:layout_gravity="start"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/button_edit"
            android:textColor="@color/white"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center"
            android:padding="8dp"
            android:elevation="4dp"
            android:layout_marginBottom="8dp"
            />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/button_delete"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:padding="8dp"
            android:elevation="4dp"
            android:layout_marginBottom="8dp"
            />
    </LinearLayout>
</LinearLayout>
