<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/textViewWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_title"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/textViewWelcomeSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/landing_subtitle"
            android:textSize="18sp"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewAlbums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:layout_alignParentTop="true"/>

    <Button
        android:id="@+id/buttonAddAlbum"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/button_add_album"
        android:background="@color/teal_200"
        android:textColor="@color/black"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:textSize="25sp"
        android:elevation="6dp" />

</FrameLayout>
